--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,11 @@ python:
   - "2.7"
   - "pypy"
 
-install: pip install -r requirements.txt --use-mirrors
+install:
+  - pip install -r requirements.txt --use-mirrors
+  - pip install mock unittest2
+  - "if [[ $TRAVIS_PYTHON_VERSION == '2.5' ]]; then pip install ssl simplejson; fi"
+
 
 before_script: python setup.py pep8
 script: python setup.py test
