--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,12 @@
 [tox]
-envlist = py26,py27,pypy
+envlist = py25, py26,py27,pypy
+
+
+[testenv:py25]
+deps = mock
+       ssl
+       simplejson
+       unittest2
 
 [testenv]
 deps = mock
