add pep8 support for tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py25, py26,py27,pypy
+envlist = py25, py26,py27,pypy, pep8
 
 
 [testenv:py25]
@@ -7,6 +7,10 @@ deps = mock
        ssl
        simplejson
        unittest2
+
+[testenv:pep8]
+deps = pep8
+commands = pep8 --repeat --show-source libcloud_rest tests setup.py
 
 [testenv]
 deps = mock
