add libcloud test fixtures as libcloud part support

--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,7 @@ deps = pep8
 commands = pep8 --repeat --show-source libcloud_rest tests setup.py
 
 [testenv]
-deps = mock
+deps = git+git://git.apache.org/libcloud.git#egg=libcloud
+       mock
        unittest2
 commands = python setup.py test
