--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ python:
 install:
   - pip install -r requirements.txt --use-mirrors
   - pip install mock unittest2
+  - pip install -e git://git.apache.org/libcloud.git#egg=libcloud
 
 
 before_script: python setup.py pep8
