--- a/tox.ini
+++ b/tox.ini
@@ -2,18 +2,18 @@
 envlist = py25, py26,py27,pypy, pep8
 
 
-[testenv:py25]
-deps = mock
-       ssl
-       simplejson
-       unittest2
-
-[testenv:pep8]
-deps = pep8
-commands = pep8 --repeat --show-source libcloud_rest tests setup.py
-
 [testenv]
 deps = git+git://git.apache.org/libcloud.git#egg=libcloud
        mock
        unittest2
 commands = python setup.py test
+
+[testenv:py25]
+deps = {[testenv]deps}
+       ssl
+       simplejson
+
+[testenv:pep8]
+deps = pep8
+commands = pep8 --repeat --show-source libcloud_rest tests setup.py
+
