--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ install:
   - pip install Werkzeug
   - pip install pep8
   - pip install mock unittest2
+  - pip install lockfile
   - pip install --upgrade -e git://git.apache.org/libcloud.git#egg=libcloud
 
 
