--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,7 @@ envlist = py25, py26,py27,pypy, pep8
 deps = git+git://git.apache.org/libcloud.git#egg=libcloud
        mock
        unittest2
+       lockfile
        pep8
 commands = python setup.py test
 
