remove py25 support in tox, digitalocean sshkey entry

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py25, py26,py27,pypy, pep8
+envlist = py26,py27,pypy, pep8
 
 
 [testenv]
@@ -9,11 +9,6 @@ deps = git+git://git.apache.org/libcloud.git#egg=libcloud
        lockfile
        pep8
 commands = python setup.py test
-
-[testenv:py25]
-deps = {[testenv]deps}
-       ssl
-       simplejson
 
 [testenv:pep8]
 deps = pep8
