fix setup and testing

--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,16 @@
 [tox]
-envlist = py26,py27,pypy, pep8
+envlist = py27
 
 
 [testenv]
-deps = git+git://git.apache.org/libcloud.git#egg=libcloud
+deps = apache-libcloud==0.12.4
+       werkzeug
        mock
        unittest2
        lockfile
        pep8
-commands = python setup.py test
+       pytest
+commands = py.test
 
 [testenv:pep8]
 deps = pep8
